deployment/alb-streamlit.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'ALB with SSL for Streamlit - Better WebSocket support'

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: 'VPC ID where ALB will be created'
  
  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: 'Public subnet IDs for ALB'
  
  EC2InstanceId:
    Type: AWS::EC2::Instance::Id
    Description: 'EC2 instance running Streamlit'

Resources:
  # Security Group for ALB
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security group for Streamlit ALB'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  # Application Load Balancer
  StreamlitALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: streamlit-alb
      Scheme: internet-facing
      Type: application
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets: !Ref SubnetIds

  # Target Group
  StreamlitTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: streamlit-targets
      Port: 8501
      Protocol: HTTP
      VpcId: !Ref VpcId
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 30
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      Targets:
        - Id: !Ref EC2InstanceId
          Port: 8501

  # HTTP Listener (redirect to HTTPS)
  HTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref StreamlitALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: 443
            StatusCode: HTTP_301

Outputs:
  ALBDNSName:
    Description: 'ALB DNS Name'
    Value: !GetAtt StreamlitALB.DNSName
  
  ALBURL:
    Description: 'ALB URL (HTTP - will redirect to HTTPS)'
    Value: !Sub 'http://${StreamlitALB.DNSName}'
